// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`strictNonNullAssertions > binaryExpressions > options 1`] = `
"[
  {
    "cleanups": {
      "suppressTypeErrors": true
    },
    "files": {
      "above": "",
      "below": "",
      "renameExtensions": false
    },
    "filters": [],
    "fixes": {
      "importExtensions": false,
      "incompleteTypes": false,
      "missingProperties": false,
      "noImplicitAny": false,
      "noImplicitThis": false,
      "noInferableTypes": false,
      "strictNonNullAssertions": true
    },
    "hints": {
      "react": {
        "propTypes": "whenRequired",
        "propTypesOptionality": "asWritten"
      }
    },
    "include": [
      "<rootDir>/actual.ts"
    ],
    "mutators": [
      [
        "fixImportExtensions",
        null
      ],
      [
        "fixIncompleteTypes",
        null
      ],
      [
        "fixMissingProperties",
        null
      ],
      [
        "fixNoImplicitAny",
        null
      ],
      [
        "fixNoImplicitThis",
        null
      ],
      [
        "fixNoInferableTypes",
        null
      ],
      [
        "fixStrictNonNullAssertions",
        null
      ]
    ],
    "output": {},
    "package": {
      "directory": "<rootDir>",
      "file": "<rootDir>/package.json"
    },
    "parsedTsConfig": {
      "options": {
        "strictNullChecks": true,
        "configFilePath": "<rootDir>/tsconfig.json",
        "noEmit": true,
        "noImplicitAny": false,
        "noImplicitThis": false
      },
      "fileNames": [
        "<rootDir>/actual.ts"
      ],
      "typeAcquisition": {
        "enable": false,
        "include": [],
        "exclude": []
      },
      "raw": {
        "compilerOptions": {
          "strictNullChecks": true
        },
        "files": [
          "actual.ts"
        ]
      },
      "errors": [],
      "wildcardDirectories": {},
      "compileOnSave": false
    },
    "postProcess": {
      "shell": []
    },
    "projectPath": "<rootDir>/tsconfig.json",
    "types": {
      "strictNullChecks": true
    }
  }
]"
`;

exports[`strictNonNullAssertions > callExpressions > options 1`] = `
"[
  {
    "cleanups": {
      "suppressTypeErrors": true
    },
    "files": {
      "above": "",
      "below": "",
      "renameExtensions": false
    },
    "filters": [],
    "fixes": {
      "importExtensions": false,
      "incompleteTypes": false,
      "missingProperties": false,
      "noImplicitAny": false,
      "noImplicitThis": false,
      "noInferableTypes": false,
      "strictNonNullAssertions": true
    },
    "hints": {
      "react": {
        "propTypes": "whenRequired",
        "propTypesOptionality": "asWritten"
      }
    },
    "include": [
      "<rootDir>/actual.ts"
    ],
    "mutators": [
      [
        "fixImportExtensions",
        null
      ],
      [
        "fixIncompleteTypes",
        null
      ],
      [
        "fixMissingProperties",
        null
      ],
      [
        "fixNoImplicitAny",
        null
      ],
      [
        "fixNoImplicitThis",
        null
      ],
      [
        "fixNoInferableTypes",
        null
      ],
      [
        "fixStrictNonNullAssertions",
        null
      ]
    ],
    "output": {},
    "package": {
      "directory": "<rootDir>",
      "file": "<rootDir>/package.json"
    },
    "parsedTsConfig": {
      "options": {
        "configFilePath": "<rootDir>/tsconfig.json",
        "noEmit": true,
        "noImplicitAny": false,
        "noImplicitThis": false,
        "strictNullChecks": true
      },
      "fileNames": [
        "<rootDir>/actual.ts"
      ],
      "typeAcquisition": {
        "enable": false,
        "include": [],
        "exclude": []
      },
      "raw": {
        "files": [
          "actual.ts"
        ]
      },
      "errors": [],
      "wildcardDirectories": {},
      "compileOnSave": false
    },
    "postProcess": {
      "shell": []
    },
    "projectPath": "<rootDir>/tsconfig.json",
    "types": {
      "strictNullChecks": true
    }
  }
]"
`;

exports[`strictNonNullAssertions > objectLiterals > options 1`] = `
"[
  {
    "cleanups": {
      "suppressTypeErrors": true
    },
    "files": {
      "above": "",
      "below": "",
      "renameExtensions": false
    },
    "filters": [],
    "fixes": {
      "importExtensions": false,
      "incompleteTypes": false,
      "missingProperties": false,
      "noImplicitAny": false,
      "noImplicitThis": false,
      "noInferableTypes": false,
      "strictNonNullAssertions": true
    },
    "hints": {
      "react": {
        "propTypes": "whenRequired",
        "propTypesOptionality": "asWritten"
      }
    },
    "include": [
      "<rootDir>/actual.ts"
    ],
    "mutators": [
      [
        "fixImportExtensions",
        null
      ],
      [
        "fixIncompleteTypes",
        null
      ],
      [
        "fixMissingProperties",
        null
      ],
      [
        "fixNoImplicitAny",
        null
      ],
      [
        "fixNoImplicitThis",
        null
      ],
      [
        "fixNoInferableTypes",
        null
      ],
      [
        "fixStrictNonNullAssertions",
        null
      ]
    ],
    "output": {},
    "package": {
      "directory": "<rootDir>",
      "file": "<rootDir>/package.json"
    },
    "parsedTsConfig": {
      "options": {
        "configFilePath": "<rootDir>/tsconfig.json",
        "noEmit": true,
        "noImplicitAny": false,
        "noImplicitThis": false,
        "strictNullChecks": true
      },
      "fileNames": [
        "<rootDir>/actual.ts"
      ],
      "typeAcquisition": {
        "enable": false,
        "include": [],
        "exclude": []
      },
      "raw": {
        "files": [
          "actual.ts"
        ]
      },
      "errors": [],
      "wildcardDirectories": {},
      "compileOnSave": false
    },
    "postProcess": {
      "shell": []
    },
    "projectPath": "<rootDir>/tsconfig.json",
    "types": {
      "strictNullChecks": true
    }
  }
]"
`;

exports[`strictNonNullAssertions > propertyAccesses > options 1`] = `
"[
  {
    "cleanups": {
      "suppressTypeErrors": true
    },
    "files": {
      "above": "",
      "below": "",
      "renameExtensions": false
    },
    "filters": [],
    "fixes": {
      "importExtensions": false,
      "incompleteTypes": false,
      "missingProperties": false,
      "noImplicitAny": false,
      "noImplicitThis": false,
      "noInferableTypes": false,
      "strictNonNullAssertions": true
    },
    "hints": {
      "react": {
        "propTypes": "whenRequired",
        "propTypesOptionality": "asWritten"
      }
    },
    "include": [
      "<rootDir>/actual.ts"
    ],
    "mutators": [
      [
        "fixImportExtensions",
        null
      ],
      [
        "fixIncompleteTypes",
        null
      ],
      [
        "fixMissingProperties",
        null
      ],
      [
        "fixNoImplicitAny",
        null
      ],
      [
        "fixNoImplicitThis",
        null
      ],
      [
        "fixNoInferableTypes",
        null
      ],
      [
        "fixStrictNonNullAssertions",
        null
      ]
    ],
    "output": {},
    "package": {
      "directory": "<rootDir>",
      "file": "<rootDir>/package.json"
    },
    "parsedTsConfig": {
      "options": {
        "configFilePath": "<rootDir>/tsconfig.json",
        "noEmit": true,
        "noImplicitAny": false,
        "noImplicitThis": false,
        "strictNullChecks": true
      },
      "fileNames": [
        "<rootDir>/actual.ts"
      ],
      "typeAcquisition": {
        "enable": false,
        "include": [],
        "exclude": []
      },
      "raw": {
        "files": [
          "actual.ts"
        ]
      },
      "errors": [],
      "wildcardDirectories": {},
      "compileOnSave": false
    },
    "postProcess": {
      "shell": []
    },
    "projectPath": "<rootDir>/tsconfig.json",
    "types": {
      "strictNullChecks": true
    }
  }
]"
`;

exports[`strictNonNullAssertions > returnTypes > options 1`] = `
"[
  {
    "cleanups": {
      "suppressTypeErrors": true
    },
    "files": {
      "above": "",
      "below": "",
      "renameExtensions": false
    },
    "filters": [],
    "fixes": {
      "importExtensions": false,
      "incompleteTypes": false,
      "missingProperties": false,
      "noImplicitAny": false,
      "noImplicitThis": false,
      "noInferableTypes": false,
      "strictNonNullAssertions": true
    },
    "hints": {
      "react": {
        "propTypes": "whenRequired",
        "propTypesOptionality": "asWritten"
      }
    },
    "include": [
      "<rootDir>/actual.ts"
    ],
    "mutators": [
      [
        "fixImportExtensions",
        null
      ],
      [
        "fixIncompleteTypes",
        null
      ],
      [
        "fixMissingProperties",
        null
      ],
      [
        "fixNoImplicitAny",
        null
      ],
      [
        "fixNoImplicitThis",
        null
      ],
      [
        "fixNoInferableTypes",
        null
      ],
      [
        "fixStrictNonNullAssertions",
        null
      ]
    ],
    "output": {},
    "package": {
      "directory": "<rootDir>",
      "file": "<rootDir>/package.json"
    },
    "parsedTsConfig": {
      "options": {
        "strictNullChecks": true,
        "configFilePath": "<rootDir>/tsconfig.json",
        "noEmit": true,
        "noImplicitAny": false,
        "noImplicitThis": false
      },
      "fileNames": [
        "<rootDir>/actual.ts"
      ],
      "typeAcquisition": {
        "enable": false,
        "include": [],
        "exclude": []
      },
      "raw": {
        "compilerOptions": {
          "strictNullChecks": true
        },
        "files": [
          "actual.ts"
        ]
      },
      "errors": [],
      "wildcardDirectories": {},
      "compileOnSave": false
    },
    "postProcess": {
      "shell": []
    },
    "projectPath": "<rootDir>/tsconfig.json",
    "types": {
      "strictNullChecks": true
    }
  }
]"
`;
